feat: second class web part finished

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind utilities;
 @tailwind components;
+
+@media (max-width: 1080px) {
+  html {
+    font-size: 93.75%;
+  }
+}
+
+@media (max-width: 720px) {
+  html {
+    font-size: 87.5%;
+  }
+}
+
+@media (max-width: 400px) {
+  html {
+    font-size: 81.25%;
+  }
+}
